important_logs/shellinabox___shellinabox_build.log
Running command: autoreconf -i
configure.ac:18: warning: 'AM_CONFIG_HEADER': this macro is obsolete.
configure.ac:18: You should use the 'AC_CONFIG_HEADERS' macro instead.
./lib/autoconf/general.m4:2434: AC_DIAGNOSE is expanded from...
aclocal.m4:745: AM_CONFIG_HEADER is expanded from...
configure.ac:18: the top level
configure.ac:24: warning: The macro `AC_PROG_LIBTOOL' is obsolete.
configure.ac:24: You should run autoupdate.
m4/libtool.m4:100: AC_PROG_LIBTOOL is expanded from...
configure.ac:24: the top level
configure.ac:54: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:54: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:54: the top level
configure.ac:66: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:66: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:66: the top level
configure.ac:73: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:73: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:73: the top level
configure.ac:80: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:80: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:80: the top level
configure.ac:87: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:87: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:87: the top level
configure.ac:93: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:93: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:93: the top level
configure.ac:153: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:153: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:153: the top level
configure.ac:157: warning: The macro `AC_TRY_LINK' is obsolete.
configure.ac:157: You should run autoupdate.
./lib/autoconf/general.m4:2920: AC_TRY_LINK is expanded from...
configure.ac:157: the top level
Command finished with return code: 0

Running command: ./autogen.sh
/bin/sh: 1: ./autogen.sh: not found
Command finished with return code: 127

Running command: ./configure
checking for a BSD-compatible install... /usr/bin/install -c
checking whether build environment is sane... yes
checking for a race-free mkdir -p... /usr/bin/mkdir -p
checking for gawk... no
checking for mawk... mawk
checking whether make sets $(MAKE)... yes
checking whether make supports nested variables... yes
checking for gcc... gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether the compiler supports GNU C... yes
checking whether gcc accepts -g... yes
checking for gcc option to enable C11 features... none needed
checking whether gcc understands -c and -o together... yes
checking whether make supports the include directive... yes (GNU style)
checking dependency style of gcc... gcc3
checking build system type... x86_64-pc-linux-gnu
checking host system type... x86_64-pc-linux-gnu
checking how to print strings... printf
checking for a sed that does not truncate output... /usr/bin/sed
checking for grep that handles long lines and -e... /usr/bin/grep
checking for egrep... /usr/bin/grep -E
checking for fgrep... /usr/bin/grep -F
checking for ld used by gcc... /usr/bin/ld
checking if the linker (/usr/bin/ld) is GNU ld... yes
checking for BSD- or MS-compatible name lister (nm)... /usr/bin/nm -B
checking the name lister (/usr/bin/nm -B) interface... BSD nm
checking whether ln -s works... yes
checking the maximum length of command line arguments... 1572864
checking how to convert x86_64-pc-linux-gnu file names to x86_64-pc-linux-gnu format... func_convert_file_noop
checking how to convert x86_64-pc-linux-gnu file names to toolchain format... func_convert_file_noop
checking for /usr/bin/ld option to reload object files... -r
checking for file... file
checking for objdump... objdump
checking how to recognize dependent libraries... pass_all
checking for dlltool... no
checking how to associate runtime and link libraries... printf %s\n
checking for ar... ar
checking for archiver @FILE support... @
checking for strip... strip
checking for ranlib... ranlib
checking command to parse /usr/bin/nm -B output from gcc object... ok
checking for sysroot... no
checking for a working dd... /usr/bin/dd
checking how to truncate binary pipes... /usr/bin/dd bs=4096 count=1
checking for mt... no
checking if : is a manifest tool... no
checking for stdio.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for strings.h... yes
checking for sys/stat.h... yes
checking for sys/types.h... yes
checking for unistd.h... yes
checking for dlfcn.h... yes
checking for objdir... .libs
checking if gcc supports -fno-rtti -fno-exceptions... no
checking for gcc option to produce PIC... -fPIC -DPIC
checking if gcc PIC flag -fPIC -DPIC works... yes
checking if gcc static flag -static works... yes
checking if gcc supports -c -o file.o... yes
checking if gcc supports -c -o file.o... (cached) yes
checking whether the gcc linker (/usr/bin/ld -m elf_x86_64) supports shared libraries... yes
checking whether -lc should be explicitly linked in... no
checking dynamic linker characteristics... GNU/Linux ld.so
checking how to hardcode library paths into programs... immediate
checking whether stripping libraries is possible... yes
checking if libtool supports shared libraries... yes
checking whether to build shared libraries... yes
checking whether to build static libraries... yes
checking for an ANSI C-conforming const... yes
checking how to run the C preprocessor... gcc -E
checking whether gcc needs -traditional... no
checking for libutil.h... no
checking for pthread.h... yes
checking for pty.h... yes
checking for strings.h... (cached) yes
checking for syslog.h... yes
checking for sys/prctl.h... yes
checking for sys/uio.h... yes
checking for util.h... no
checking for login_tty... yes
checking for strlcat... no
checking for vsyslog... yes
checking for getgrgid_r... yes
checking for getgrnam_r... yes
checking for gethostbyname_r... yes
checking for getpwnam_r... yes
checking for getpwuid_r... yes
checking for openpty... yes
checking for strcasestr... yes
checking for getresuid... yes
checking for getresgid... yes
checking for setresuid... yes
checking for setresgid... yes
checking for utmp.h... yes
checking for utmpx.h... yes
checking for openssl/bio.h... no
checking for openssl/err.h... no
checking for openssl/ssl.h... no
checking for security/pam_appl.h... no
checking for security/pam_client.h... no
checking for security/pam_misc.h... no
checking for dlopen... yes
checking for deflate in -lz... no
checking that generated files are newer than configure... done
configure: creating ./config.status
config.status: creating Makefile
config.status: creating config.h
config.status: config.h is unchanged
config.status: executing depfiles commands
config.status: executing libtool commands
Command finished with return code: 0

Running command: make
(CDPATH="${ZSH_VERSION+.}:" && cd . && /bin/bash '/INSTALL_C/repos/repos_400_c_round_two/shellinabox___shellinabox/missing' autoheader)
rm -f stamp-h1
touch config.h.in
cd . && /bin/bash ./config.status config.h
config.status: creating config.h
config.status: config.h is unchanged
make  all-am
make[1]: Entering directory '/INSTALL_C/repos/repos_400_c_round_two/shellinabox___shellinabox'
depbase=`echo libhttp/ssl.lo | sed 's|[^/]*$|.deps/&|;s|\.lo$||'`;\
/bin/bash ./libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I.    -g -std=gnu99 -Wall -Os -MT libhttp/ssl.lo -MD -MP -MF $depbase.Tpo -c -o libhttp/ssl.lo libhttp/ssl.c &&\
mv -f $depbase.Tpo $depbase.Plo
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -g -std=gnu99 -Wall -Os -MT libhttp/ssl.lo -MD -MP -MF libhttp/.deps/ssl.Tpo -c libhttp/ssl.c  -fPIC -DPIC -o libhttp/.libs/ssl.o
libhttp/ssl.c: In function 'sslGetNextBIO':
libhttp/ssl.c:1020:11: error: invalid use of incomplete typedef 'BIO'
 1020 |   return b->next_bio;
      |           ^~
libhttp/ssl.c:1024:1: warning: control reaches end of non-void function [-Wreturn-type]
 1024 | }
      | ^
make[1]: *** [Makefile:762: libhttp/ssl.lo] Error 1
make[1]: Leaving directory '/INSTALL_C/repos/repos_400_c_round_two/shellinabox___shellinabox'
make: *** [Makefile:544: all] Error 2
Command finished with return code: 2

